--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,10 +19,10 @@ kotlinSerialization = "1.7.3"
 koin = "4.0.0"
 ktor = "3.0.0"
 coil3 = "3.0.0-rc02"
-sqlite = "2.5.0-beta01"
+sqlite = "2.5.0-rc01"
 kotlin = "2.1.0"
 ksp = "2.1.0-1.0.29"
-room = "2.7.0-alpha07"
+room = "2.7.0-rc01"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
